<resources>
    <string name="app_name">TeldaProject</string>


    <!-- Popular movies -->
    <string name="popular_movies_search_hint">Search in images..</string>
    <string name="popular_movies_movie_title">Kill Bill: Vol.1</string>
    <string name="popular_movies_movie_date">2021–12–15</string>
    <string name="popular_movies_movie_overview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>

    <!-- Movies Details -->
    <string name="movies_details_title">Spider-Man: No Way Home</string>
    <string name="movies_details_description">Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man.</string>
    <string name="movies_details_tagline">The Multiverse unleashed.</string>
    <string name="movies_details_revenue">1832000000</string>
    <string name="movies_details_revenue_title">Revenue:</string>
    <string name="movies_details_release_date">2021–12–15</string>
    <string name="movies_details_release_date_title">Release:</string>
    <string name="movies_details_status">Released</string>
    <string name="movies_details_status_title">Status:</string>
    <string name="movies_details_cast_title">Cast:</string>
    <string name="movies_details_similar_title">Similar Movies:</string>


    <!-- Response messages-->
    <string name="error_no_connection">Oops , there\'s no Network connection</string>
    <string name="error_message_title">Error!</string>
    <string name="success_message_title">Success</string>
</resources>