<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetailsObject"
            type="com.telda.domain.model.movie_details.details.MovieDetailsResponse" />

        <variable
            name="movieDetailsListener"
            type="com.telda.presentation.ui.movie_details.MovieDetailsViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <!-- movie image -->
        <androidx.appcompat.widget.AppCompatImageView
            imageUrl="@{movieDetailsObject.poster_path}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_dummy_movie_2"
            app:imageUrl="@{movieDetailsObject.poster_path}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- movie details container -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/colorOnSecondary"
            app:cardCornerRadius="@dimen/dp16w"
            app:cardElevation="@dimen/dp4w"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <!-- movie title -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/dp8w"
                                android:layout_marginTop="@dimen/dp16w"
                                android:layout_marginEnd="@dimen/dp8w"
                                android:text="@{movieDetailsObject.title}"
                                android:textColor="@color/colorOnPrimary"
                                android:textSize="@dimen/sp21"
                                android:textStyle="bold"
                                tools:text="@string/movies_details_title" />
                            <!-- movie description -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/dp8w"
                                android:layout_marginTop="@dimen/dp8w"
                                android:layout_marginEnd="@dimen/dp8w"
                                android:gravity="center"
                                android:text="@{movieDetailsObject.overview}"
                                android:textColor="@color/colorOnPrimary"
                                android:textSize="@dimen/sp16"
                                tools:text="@string/movies_details_title" />
                            <!-- revenue , status , release_date -->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp16w"
                                android:baselineAligned="false"
                                android:orientation="horizontal">
                                <!-- revenue -->
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/dp8w"
                                        android:layout_marginEnd="@dimen/dp8w"
                                        android:drawablePadding="@dimen/dp8w"
                                        android:gravity="center"
                                        android:text="@string/movies_details_revenue_title"
                                        android:textColor="@color/colorPrimaryDark"
                                        android:textSize="@dimen/sp16"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/dp8w"
                                        android:layout_marginEnd="@dimen/dp8w"
                                        android:drawablePadding="@dimen/dp8w"
                                        android:gravity="center"
                                        android:text="@{movieDetailsObject.finalRevenue()}"
                                        android:textColor="@color/colorAccent"
                                        android:textSize="@dimen/sp16" />
                                </LinearLayout>
                                <!-- status -->
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/dp8w"
                                        android:layout_marginEnd="@dimen/dp8w"
                                        android:drawablePadding="@dimen/dp8w"
                                        android:gravity="center"
                                        android:text="@string/movies_details_status_title"
                                        android:textColor="@color/colorPrimaryDark"
                                        android:textSize="@dimen/sp16"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/dp8w"
                                        android:layout_marginEnd="@dimen/dp8w"
                                        android:drawablePadding="@dimen/dp8w"
                                        android:gravity="center"
                                        android:text="@{movieDetailsObject.status}"
                                        android:textColor="@color/colorAccent"
                                        android:textSize="@dimen/sp16" />
                                </LinearLayout>
                                <!-- release_date -->
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="114dp"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/dp8w"
                                        android:layout_marginEnd="@dimen/dp8w"
                                        android:drawablePadding="@dimen/dp8w"
                                        android:gravity="center"
                                        android:text="@string/movies_details_release_date_title"
                                        android:textColor="@color/colorPrimaryDark"
                                        android:textSize="@dimen/sp16"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/dp8w"
                                        android:layout_marginEnd="@dimen/dp8w"
                                        android:drawablePadding="@dimen/dp8w"
                                        android:gravity="center"
                                        android:text="@{movieDetailsObject.release_date}"
                                        android:textColor="@color/colorAccent"
                                        android:textSize="@dimen/sp16" />
                                </LinearLayout>

                            </LinearLayout>
                            <!-- cast -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginStart="@dimen/dp8w"
                                android:layout_marginTop="@dimen/dp8w"
                                android:layout_marginEnd="@dimen/dp8w"
                                android:text="@string/movies_details_cast_title"
                                android:textColor="@color/colorOnPrimary"
                                android:textSize="@dimen/sp16"
                                android:textStyle="bold" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_move_cast"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dp8w"
                                android:layout_marginEnd="@dimen/dp8w"
                                tools:listitem="@layout/movie_cast_item" />
                            <!-- similar -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginStart="@dimen/dp8w"
                                android:layout_marginTop="@dimen/dp8w"
                                android:layout_marginEnd="@dimen/dp8w"
                                android:text="@string/movies_details_similar_title"
                                android:textColor="@color/colorOnPrimary"
                                android:textSize="@dimen/sp16"
                                android:textStyle="bold" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_movie_similar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dp8w"
                                android:layout_marginEnd="@dimen/dp8w" />


                        </LinearLayout>

                        <View
                            android:layout_width="@dimen/dp90w"
                            android:layout_height="@dimen/dp4h"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dp8w"
                            android:layout_marginBottom="@dimen/dp8w" />

                    </RelativeLayout>
                </ScrollView>
            </androidx.core.widget.NestedScrollView>


        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- guidelines -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />
        <!-- close -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp55w"
            android:layout_height="@dimen/dp55h"
            android:onClick="@{()-> movieDetailsListener.onCloseClicked()}"
            android:padding="@dimen/dp16w"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>